k8s/part-db/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: part-db
  namespace: productivity
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: part-db
  template:
    metadata:
      labels:
        app: part-db
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: part-db
          image: jbtronics/part-db1:v2.19.2
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          startupProbe:
            tcpSocket:
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: part-db-data
              mountPath: /var/www/html/var/db
              subPath: db
            - name: part-db-data
              mountPath: /var/www/html/uploads
              subPath: uploads
            - name: part-db-data
              mountPath: /var/www/html/public/media
              subPath: public_media
      volumes:
        - name: part-db-data
          persistentVolumeClaim:
            claimName: part-db-pvc
