k8s/part-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: part-db
  namespace: productivity
spec:
  selector:
    app: part-db
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
